plugins {
    id 'java-library'
    id 'com.github.johnrengelman.shadow' version '7.1.2'
}

shadowJar {
    archiveBaseName.set('Negativity')
    archiveClassifier.set(null)
    
    mergeServiceFiles()
}


task prepareServer(type: Copy) {
    from shadowJar.outputs
    rename { 'Negativity.jar' }
    def pluginDir = System.getProperty('plugins.dir')
    if (pluginDir == null) {
        enabled(false)
    } else {
        into pluginDir
    }
}

build.dependsOn shadowJar

subprojects {
    apply plugin: 'java-library'

    group = 'com.elikill58'

    repositories {
        mavenCentral()
        maven {
            name 'jitpack'
            url 'https://jitpack.io/'
        }
        maven {
            name 'codemc'
            url 'https://repo.codemc.org/repository/maven-public/'
        }
        maven {
            name 'Sonatype'
            url 'https://oss.sonatype.org/content/groups/public/'
        }
        maven {
            name 'eliapp'
            url 'https://repo.eliapp.fr:8081/repository/internal/'
        }
    }

    dependencies {
        compileOnly 'com.google.code.findbugs:jsr305:3.0.2'
    }

    java.toolchain.languageVersion = JavaLanguageVersion.of(8)

    tasks.withType(JavaCompile) {
        options.encoding = 'UTF-8'
    }

    tasks.withType(ProcessResources) {
        filteringCharset = 'UTF-8'
    }
}
